--- a/build.gradle
+++ b/build.gradle
@@ -1,10 +1,10 @@
 plugins {
   id 'java'
-  id 'org.jetbrains.intellij.platform' version '2.5.0'
+  id 'org.jetbrains.intellij.platform' version '2.10.4'
 }
 
 group 'com.github.tarn2206'
-version '2.0.2'
+version '2.0.3-anm'
 
 java {
   toolchain {
@@ -34,8 +34,8 @@ dependencies {
     pluginVerifier()
   }
   implementation gradleApi()
-  compileOnly 'org.projectlombok:lombok:1.18.38'
-  annotationProcessor 'org.projectlombok:lombok:1.18.38'
+  compileOnly 'org.projectlombok:lombok:1.18.42'
+  annotationProcessor 'org.projectlombok:lombok:1.18.42'
   testImplementation 'junit:junit:4.13.2'
 }
 
@@ -64,6 +64,11 @@ patchPluginXml {
   sinceBuild = "231"
   untilBuild = provider { null }
   changeNotes = """
+<h2>2.0.3-anm</h2>
+<ul>
+    <li>Refactor background tasks to ensure UI updates run on EDT</li>
+    <li>Some Updates</li>
+</ul>
 <h2>2.0.2</h2>
 <ul>
     <li>Improve running background tasks</li>
